# vultest

./: README.md  TODO  TODO.todo  anti-xss.py  pyproject.toml  requirements.txt  sqlifinder.py  test-sites.txt  vultest.py
core/: core.py  crawler.py  requester.py
lib/: Log.py  colors.py  crawler.py  helper.py
main/: anti-xss.py  sqlifinder.py
run/: anti-xss.py  sqlifinder.py
vulnerabilities/: vulnerabilities.txt
