[tool.poetry]
name = "vultest"
version = "0.1.0"
description = "An xss and SQLi web vulnerability scanner"
authors = ["xtasysensei <maiwuyashem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
tqdm = "^4.66.4"
click = "^8.1.7"
termcolor = "^2.4.0"
frosch = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
